--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">FP</string>
     <string name="ini_kamera">ini kamera</string>
+    <string name="textview">TextView</string>
 </resources>
