galeri (deskripsi belum)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="ini_kamera">ini kamera</string>
     <string name="textview">TextView</string>
     <string name="enter_how_much_cookies_you_want">Enter How Much Cookies You Want</string>
+    <string name="container_image">container_image</string>
 </resources>
